LifeTimeCalc finished so far; check the damage calc one again

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -22,12 +22,17 @@
     "import pylife.stress.equistress\n",
     "from scipy.stats import norm\n",
     "from pylife.strength import failure_probability as fp\n",
-    "#from __future__ import print_function\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from matplotlib import cm\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
     "import io\n",
     "from IPython.display import HTML\n",
-    "import base64 "
+    "import base64 \n",
+    "import matplotlib as mpl\n",
+    "# mpl.style.use('seaborn')\n",
+    "# mpl.style.use('seaborn-notebook')\n",
+    "mpl.style.use('bmh')"
    ]
   },
   {
@@ -62,7 +67,7 @@
     "    if len(data_akt.columns) == 1:\n",
     "        print ('please use \",\" as seperator next time')\n",
     "        data_akt = pd.read_csv(data_loc + upload, sep = \";\")\n",
-    "    input_data.append(data_akt)\n",
+    "        input_data.append(data_akt)\n",
     "    print(upload + \" imported succesfully\")"
    ]
   },
@@ -94,11 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f_resample.value)\n",
-    "print(timeColumn.value)\n",
     "meas_resample = []\n",
     "for file_act in input_data:\n",
-    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(timeColumn.value,f_resample.value))"
+    "    file_act = file_act.set_index(timeColumn.value)\n",
+    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(f_resample.value))\n",
+    "display(file_act)"
    ]
   },
   {
@@ -108,7 +113,7 @@
    "outputs": [],
    "source": [
     "print(\"select channel to plot\")\n",
-    "plotChan = widgets.Dropdown(options = file_act.drop([timeColumn.value],axis = 'columns').columns)\n",
+    "plotChan = widgets.Dropdown(options = file_act.columns)\n",
     "display(plotChan)"
    ]
   },
@@ -123,7 +128,7 @@
     "fig.suptitle('Resampled input data')\n",
     "ii = 0\n",
     "for df_act in meas_resample:\n",
-    "    ax[ii].plot(df_act['t'], df_act[plotChan.value])\n",
+    "    ax[ii].plot(df_act.index, df_act[plotChan.value])\n",
     "    ii += 1"
    ]
   },
@@ -142,10 +147,11 @@
    "source": [
     "bandpass = []\n",
     "for df_act in meas_resample:\n",
-    "    bandpassDF = df_act[[timeColumn.value]]\n",
-    "    for col_act in df_act.drop([timeColumn.value],axis = 'columns').columns:\n",
-    "        bandpassDF[col_act] = ts.TimeSignalPrep(df_act.loc[:,col_act]).butter_bandpass(f_min.value,f_max.value,f_resample.value,5)\n",
-    "    bandpass.append(bandpassDF)            "
+    "    bandpassDF = pd.DataFrame(index = df_act.index)\n",
+    "    for col_act in df_act.columns:\n",
+    "        bandpassDF[col_act] = ts.TimeSignalPrep(df_act[col_act]).butter_bandpass(f_min.value,f_max.value,f_resample.value,5)\n",
+    "    bandpass.append(bandpassDF) \n",
+    "display(bandpassDF)"
    ]
   },
   {
@@ -162,7 +168,7 @@
    "outputs": [],
    "source": [
     "print(\"select channel to for running stats\")\n",
-    "runChan = widgets.Dropdown(options = df_act.drop([timeColumn.value],axis = 'columns').columns)\n",
+    "runChan = widgets.Dropdown(options = df_act.columns)\n",
     "display(runChan)\n",
     "print(\" Running statistics method\")\n",
     "method_choice = widgets.Dropdown(options = ['rms','max','min','abs'])\n",
@@ -189,10 +195,14 @@
     "\"\"\" Running statistics to drop out zero values \"\"\"\n",
     "cleaned = []\n",
     "for df_act in bandpass:\n",
-    "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(col = runChan.value,\n",
-    "                            window_length = int(tab.children[0].value),buffer_overlap = int(tab.children[1].value),limit = tab.children[2].value,method = method_choice.value)\n",
-    "    cleaned_df[timeColumn.value] =  np.linspace(0,len(cleaned_df)/f_resample.value,len(cleaned_df)+1)[:-1]          \n",
-    "    cleaned.append(cleaned_df)"
+    "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(\n",
+    "                            col = runChan.value,\n",
+    "                            window_length = int(tab.children[0].value),\n",
+    "                            buffer_overlap = int(tab.children[1].value),\n",
+    "                            limit = tab.children[2].value,\n",
+    "                            method = method_choice.value)\n",
+    "    cleaned.append(cleaned_df)\n",
+    "# display(cleaned_df)"
    ]
   },
   {
@@ -345,7 +355,7 @@
     "fig.suptitle('Cleaned input data')\n",
     "ii = 0\n",
     "for df_act in cleaned:\n",
-    "    ax[ii].plot(df_act['t'], df_act['PCB_P93_A1S_5116_Z'])\n",
+    "    ax[ii].plot(df_act.index, df_act[runChan.value])\n",
     "    ii += 1    "
    ]
   },
@@ -362,8 +372,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfcChan = widgets.Dropdown(options = df_act.drop([timeColumn.value],axis = 'columns').columns)\n",
-    "display(rfcChan)"
+    "rfcChan = widgets.Dropdown(options = df_act.columns)\n",
+    "display(rfcChan)\n",
+    "binwidget = widgets.IntSlider(value = 64, min=1, max=1024, step=1,description='Bins:')\n",
+    "display(binwidget)"
    ]
   },
   {
@@ -372,11 +384,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "rainflow = []\n",
     "for df_act in cleaned:\n",
     "    rfc = RainflowCounterFKM().process(df_act[rfcChan.value].values)\n",
-    "    rfm = rfc.get_rainflow_matrix_frame(64)\n",
+    "    rfm = rfc.get_rainflow_matrix_frame(binwidget.value)\n",
     "    rainflow.append(rfm)"
    ]
   },
@@ -387,23 +398,42 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "fig, ax = plt.subplots(1,len(rainflow))\n",
+    "colormap = cm.ScalarMappable()\n",
+    "cmap = cm.get_cmap('PuRd')\n",
+    "# fig, ax = plt.subplots(2,len(rainflow))\n",
+    "fig = plt.figure(figsize = (8,11))\n",
     "fig.suptitle('Rainflow of Channel ' + rfcChan.value)\n",
-    "ii = 0\n",
+    "ii = 1\n",
+    "\n",
     "for rf_act in rainflow:\n",
+    "    # 2D\n",
+    "    ax = fig.add_subplot(3,2,2*ii-1)\n",
     "    froms = rf_act.index.get_level_values('from').mid\n",
     "    tos = rf_act.index.get_level_values('to').mid\n",
-    "    ax[ii].set_xlabel('From')\n",
-    "    ax[ii].set_ylabel('To')\n",
-    "    ax[ii].imshow(np.flipud(np.log10(rf_act.values.reshape(rf_act.index.levshape).T)), extent=[froms.min(), froms.max(), tos.min(), tos.max()])\n",
-    "    ii += 1    \n"
+    "    counts = np.flipud((rf_act.values.reshape(rf_act.index.levshape).T))#.ravel()\n",
+    "    ax.set_xlabel('From')\n",
+    "    ax.set_ylabel('To')\n",
+    "    ax.imshow(np.log10(counts), extent=[froms.min(), froms.max(), tos.min(), tos.max()])\n",
+    "    # 3D\n",
+    "    ax = fig.add_subplot(3,2,2*ii, projection='3d')\n",
+    "    bottom = np.zeros_like(counts.ravel())\n",
+    "    width = rf_act.index.get_level_values('from').length.min()\n",
+    "    depth = rf_act.index.get_level_values('to').length.min()\n",
+    "    max_height = np.max(counts.ravel())   # get range of colorbars\n",
+    "    min_height = np.min(counts.ravel())\n",
+    "    rgba = [cmap((k-min_height)/max_height) for k in counts.ravel()] \n",
+    "    ax.set_xlabel('From')\n",
+    "    ax.set_ylabel('To')\n",
+    "    ax.set_zlabel('Count')\n",
+    "    ax.bar3d(froms.ravel(), tos.ravel(), bottom, width, depth, counts.ravel(), shade=True, color=rgba, zsort='average')\n",
+    "    ii += 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Meanstress transform ###"
+    "### Meanstress transformation ###"
    ]
   },
   {
@@ -456,7 +486,6 @@
     "for i in range(len(child)):\n",
     "    tab_repeat.set_title(i, files[i])\n",
     "    tab_repeat.children[i].value = 1\n",
-    "\n",
     "tab_repeat"
    ]
   },
@@ -520,8 +549,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SNmethod = widgets.Dropdown(options = ['Miner Elementar','Miner Haibach','Miner original'])\n",
-    "display(SNmethod)"
+    "for ii in range(len(files)): \n",
+    "    transformed[ii] = transformed[ii]*tab_repeat.children[ii].value\n",
+    "    if ii == 0:\n",
+    "        range_only_total = transformed[ii]\n",
+    "    else:\n",
+    "        range_only_total = pd.concat([range_only_total,transformed[ii]]).sort_index()\n",
+    "index_min =  range_only_total.index.left.min()\n",
+    "index_max =  range_only_total.index.right.max()        \n",
+    "range_only_total = range_only_total.groupby(\n",
+    "        pd.cut(range_only_total.index.mid.values,\n",
+    "                             np.linspace(index_min,\n",
+    "                                         index_max,\n",
+    "                                         binwidget.value))).sum()\n",
+    "range_only_total.index = pd.interval_range(index_min,\n",
+    "                                         index_max,\n",
+    "                                         binwidget.value-1,name = 'range')\n",
+    "display(range_only_total)    "
    ]
   },
   {
@@ -530,14 +574,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage_calc = MinerElementar(**sn_curve_parameters)\n",
-    "data_act = transformed[0]\n",
-    "range_mid = data_act.index.get_level_values('range').mid.values\n",
-    "data_finite = data_act[range_mid > sn_curve_parameters['SD_50']][::-1]\n",
-    "stress_finite = data_finite.index.get_level_values('range').mid.values\n",
-    "N = damage_calc.sn_curve.calc_N(stress_finite)\n",
-    "d = np.sum(data_act[range_mid > sn_curve_parameters['SD_50']].values/N)\n",
-    "print(\"\\033[1m  Total Damage: %.2f  \\033[0m\" %d) "
+    "index_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib notebook\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=2,figsize=(10, 5))\n",
+    "# plot total\n",
+    "amplitude = range_only_total.index.get_level_values('range').left.values[::-1]/2\n",
+    "cycles = range_only_total.values[::-1].ravel()\n",
+    "# ax[0].step(amplitude,cycles, height = range_only_total.index.get_level_values('range').length.min())\n",
+    "# ax[1].step(amplitude,np.cumsum(cycles), \n",
+    "#            height = range_only_total.index.get_level_values('range').length.min()/2,\n",
+    "#            fill = False, ec = 'black')\n",
+    "ax[0].step(cycles,amplitude)\n",
+    "ax[1].step(np.cumsum(cycles),amplitude)\n",
+    "\n",
+    "# for range_only in transformed:\n",
+    "#     amplitude = range_only.index.get_level_values('range').mid.values[::-1]/2\n",
+    "#     cycles = range_only.values[::-1].ravel()\n",
+    "    \n",
+    "#     ax[0].barh(amplitude,np.cumsum(cycles), height = range_only.index.get_level_values('range').length.min())\n",
+    "#     ax[1].barh(amplitude,cycles, height = range_only.index.get_level_values('range').length.min())\n",
+    "#     ax[0].set_title('Cumulated sum count')\n",
+    "#     ax[1].set_title('Count')\n",
+    "#     for ai in ax:\n",
+    "#         ai.xaxis.grid(True)\n",
+    "#     #     ai.set_xticks([y+1 for y in range(len(all_data))], )\n",
+    "#         ai.set_xlabel('count')\n",
+    "# #         ai.set_ylabel('amplitude of ' + colName)\n",
+    "#         ai.set_ylim((0,max(amplitude)))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nominal stress approach ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Material parameters ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = WL_param()\n",
+    "display(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_para, _ = WL_param_display(mat)\n",
+    "sn_curve_parameters =  {key:mat_para[key] for key in mat_para.keys() - {'TN_inv', 'TS_inv'}} \n",
+    "mat_para['TS_inv'] = mat_para['TN_inv']**(1/mat_para['k_1'])\n",
+    "print(mat_para)\n",
+    "print(sn_curve_parameters)\n",
+    "mat_para['1/TN'] = mat_para['TN_inv']\n",
+    "mat_para['1/TS'] = mat_para['TS_inv']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Damage Calculation ###"
    ]
   },
   {
@@ -554,9 +671,11 @@
     "        self.loads_max = loads_max\n",
     "SRI = mat_para['SD_50']*(mat_para['ND_50']**(1/mat_para['k_1']))\n",
     "wc = wc_data(mat_para['k_1'],mat_para['TN_inv'],SRI) \n",
-    "_ = PlotWoehlerCurve.final_curve_plot(wc, mat_para['SD_50'], mat_para['ND_50'],mat_para['TS_inv'],0, \n",
-    "                                      None,\"Amplitude\",\"Load\", \" \", (1,1e8), (1e1,1e3), 0)\n",
-    "plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())"
+    "_ = PlotWoehlerCurve.final_curve_plot(mat_para, 0,\"amp\",'ACC', \n",
+    "                                      'm/s^2',(1,1e8), (1e2,5e3),\n",
+    "                                      0)\n",
+    "# plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())\n",
+    "plt.step(np.cumsum(cycles),2*amplitude)"
    ]
   },
   {
@@ -723,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
