Damage calculation enhancements (Miner-Haibach and original)

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -9,27 +9,35 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from pylife.stress.rainflow import *\n",
-    "import pylife.strength.meanstress\n",
+    "from pylife.stress.histogram import *\n",
     "import pylife.stress.timesignal as ts\n",
+    "from pylife.stress.rainflow import *\n",
+    "import pylife.stress.equistress\n",
+    "\n",
+    "import pylife.strength.meanstress\n",
     "from pylife.strength import miner\n",
+    "from pylife.strength import sn_curve\n",
     "from pylife.strength.miner import MinerElementar, MinerHaibach\n",
-    "import matplotlib.pyplot as plt\n",
+    "from pylife.strength import failure_probability as fp\n",
+    "\n",
     "from pylife.materialdata.woehler.diagram import *\n",
     "from pylife.materialdata.woehler.widgets import *\n",
     "from pylife.materialdata.woehler.analyzer import *\n",
+    "\n",
     "import pylife.utils.meshplot\n",
-    "import pylife.stress.equistress\n",
-    "from scipy.stats import norm\n",
-    "from pylife.strength import failure_probability as fp\n",
+    "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
+    "import matplotlib as mpl\n",
+    "\n",
+    "from scipy.stats import norm\n",
+    "\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
     "import io\n",
     "from IPython.display import HTML\n",
     "import base64 \n",
-    "import matplotlib as mpl\n",
+    "\n",
     "# mpl.style.use('seaborn')\n",
     "# mpl.style.use('seaborn-notebook')\n",
     "mpl.style.use('bmh')"
@@ -145,6 +153,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "f_min = widgets.FloatText(value = 100,description='min frequency [Hz]',disabled=False)\n",
+    "f_max = widgets.FloatText(value = 5e3,description='max frequency [Hz]',disabled=False)\n",
+    "display(f_min)\n",
+    "display(f_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bandpass = []\n",
     "for df_act in meas_resample:\n",
     "    bandpassDF = pd.DataFrame(index = df_act.index)\n",
@@ -203,145 +223,6 @@
     "                            method = method_choice.value)\n",
     "    cleaned.append(cleaned_df)\n",
     "# display(cleaned_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib notebook\n",
-    "fig, ax = plt.subplots(len(meas_resample))\n",
-    "fig.suptitle('Cleaned input data')\n",
-    "ii = 0\n",
-    "for df_act in cleaned:\n",
-    "    ax[ii].plot(df_act['t'], df_act['PCB_P93_A1S_5116_Z'])\n",
-    "    ii += 1    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rainflow ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib notebook\n",
-    "Chan_sel = 'PCB_P93_A1S_5116_Z'\n",
-    "rainflow = []\n",
-    "for df_act in cleaned:\n",
-    "    rfc = RainflowCounterFKM().process(df_act[Chan_sel].values)\n",
-    "    rfm = rfc.get_rainflow_matrix_frame(64)\n",
-    "    rainflow.append(rfm)\n",
-    "froms = rfm.index.get_level_values('from').mid\n",
-    "tos = rfm.index.get_level_values('to').mid\n",
-    "plt.xlabel('From')\n",
-    "plt.ylabel('To')\n",
-    "plt.imshow(np.flipud(np.log10(rfm.values.reshape(rfm.index.levshape).T)), extent=[froms.min(), froms.max(), tos.min(), tos.max()])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Meanstress transform ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#%matplotlib notebook\n",
-    "transformed = []\n",
-    "for rf_act in rainflow:\n",
-    "    transformed.append(rf_act.meanstress_hist.FKM_goodman(pd.Series({'M': 0.3, 'M2': 0.1}), R_goal=-1))\n",
-    "#plt.plot(transformed)    \n",
-    "#rf_act.meanstress_hist.FKM_goodman(pd.Series({'M': 0.3, 'M2': 0.1}), R_goal=-1).plot.barh()\n",
-    "#display(rf_act.meanstress_hist.FKM_goodman(pd.Series({'M': 0.3, 'M2': 0.1}), R_goal=-1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"Repaeting factor for the different time series\"\"\"\n",
-    "rpf = [250,1e3,400]\n",
-    "for ii in range(3): \n",
-    "    transformed[ii] = transformed[ii]*rpf[ii]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Nominal stress approach ##"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Material parameters ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mat = WL_param()\n",
-    "display(mat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mat_para, _ = WL_param_display(mat)\n",
-    "sn_curve_parameters = {\n",
-    "    \"N_D\": mat_para['ND_50'],\n",
-    "    \"k\": mat_para['k_1'],\n",
-    "    \"sigma_ak\": mat_para['SD_50']\n",
-    "}\n",
-    "mat_para['1/TS'] = mat_para['1/TN']**(1/mat_para['k_1'])\n",
-    "print(mat_para)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Damage Calculation ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "damage_calc = MinerElementar(**sn_curve_parameters)\n",
-    "data_act = transformed[0]\n",
-    "range_mid = data_act.index.get_level_values('range').mid.values\n",
-    "data_finite = data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]][::-1]\n",
-    "stress_finite = data_finite.index.get_level_values('range').mid.values\n",
-    "N = damage_calc.sn_curve.calc_N(stress_finite)\n",
-    "d = np.sum(data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]].values/N)\n",
-    "print(\"\\033[1m  Total Damage: %.2f  \\033[0m\" %d) "
    ]
   },
   {
@@ -495,86 +376,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ii in range(3): \n",
-    "    transformed[ii] = transformed[ii]*tab_repeat.children[ii].value"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Nominal stress approach ##"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Material parameters ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mat = WL_param()\n",
-    "display(mat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mat_para, _ = WL_param_display(mat)\n",
-    "sn_curve_parameters =  {key:mat_para[key] for key in mat_para.keys() - {'TN_inv', 'TS_inv'}} \n",
-    "mat_para['TS_inv'] = mat_para['TN_inv']**(1/mat_para['k_1'])\n",
-    "print(mat_para)\n",
-    "print(sn_curve_parameters)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Damage Calculation ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for ii in range(len(files)): \n",
     "    transformed[ii] = transformed[ii]*tab_repeat.children[ii].value\n",
-    "    if ii == 0:\n",
-    "        range_only_total = transformed[ii]\n",
-    "    else:\n",
-    "        range_only_total = pd.concat([range_only_total,transformed[ii]]).sort_index()\n",
-    "index_min =  range_only_total.index.left.min()\n",
-    "index_max =  range_only_total.index.right.max()        \n",
-    "range_only_total = range_only_total.groupby(\n",
-    "        pd.cut(range_only_total.index.mid.values,\n",
-    "                             np.linspace(index_min,\n",
-    "                                         index_max,\n",
-    "                                         binwidget.value))).sum()\n",
-    "range_only_total.index = pd.interval_range(index_min,\n",
-    "                                         index_max,\n",
-    "                                         binwidget.value-1,name = 'range')\n",
+    "range_only_total = combine_hist(transformed,method = \"sum\")\n",
     "display(range_only_total)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_max"
    ]
   },
   {
@@ -588,27 +393,23 @@
     "# plot total\n",
     "amplitude = range_only_total.index.get_level_values('range').left.values[::-1]/2\n",
     "cycles = range_only_total.values[::-1].ravel()\n",
-    "# ax[0].step(amplitude,cycles, height = range_only_total.index.get_level_values('range').length.min())\n",
-    "# ax[1].step(amplitude,np.cumsum(cycles), \n",
-    "#            height = range_only_total.index.get_level_values('range').length.min()/2,\n",
-    "#            fill = False, ec = 'black')\n",
-    "ax[0].step(cycles,amplitude)\n",
-    "ax[1].step(np.cumsum(cycles),amplitude)\n",
-    "\n",
-    "# for range_only in transformed:\n",
-    "#     amplitude = range_only.index.get_level_values('range').mid.values[::-1]/2\n",
-    "#     cycles = range_only.values[::-1].ravel()\n",
-    "    \n",
-    "#     ax[0].barh(amplitude,np.cumsum(cycles), height = range_only.index.get_level_values('range').length.min())\n",
-    "#     ax[1].barh(amplitude,cycles, height = range_only.index.get_level_values('range').length.min())\n",
-    "#     ax[0].set_title('Cumulated sum count')\n",
-    "#     ax[1].set_title('Count')\n",
-    "#     for ai in ax:\n",
-    "#         ai.xaxis.grid(True)\n",
-    "#     #     ai.set_xticks([y+1 for y in range(len(all_data))], )\n",
-    "#         ai.set_xlabel('count')\n",
-    "# #         ai.set_ylabel('amplitude of ' + colName)\n",
-    "#         ai.set_ylim((0,max(amplitude)))  "
+    "ax[0].step(cycles,amplitude,c = \"black\",linewidth = 3, label = \"total\")\n",
+    "ax[1].step(np.cumsum(cycles),amplitude,c = \"black\",linewidth = 3, label = \"total\")\n",
+    "ii = 0\n",
+    "for range_only in transformed:\n",
+    "    amplitude = range_only.index.get_level_values('range').mid.values[::-1]/2\n",
+    "    cycles = range_only.values[::-1].ravel()\n",
+    "    ax[0].step(cycles,amplitude,label = files [ii])\n",
+    "    ax[1].step(np.cumsum(cycles),amplitude,label = files [ii])\n",
+    "    ii += 1\n",
+    "ax[0].set_title('Count')\n",
+    "ax[1].set_title('Cumulated sum count')\n",
+    "ax[1].legend()\n",
+    "for ai in ax:\n",
+    "    ai.xaxis.grid(True)\n",
+    "    ai.set_xlabel('count')\n",
+    "    ai.set_ylabel('amplitude of ' + rfcChan.value)\n",
+    "    ai.set_ylim((0,max(amplitude)))  "
    ]
   },
   {
@@ -655,6 +456,26 @@
    "metadata": {},
    "source": [
     "### Damage Calculation ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SNmethod = widgets.Dropdown(options = ['Miner Elementar','Miner Haibach','Miner original'])\n",
+    "display(SNmethod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "damage_calc = sn_curve.FiniteLifeCurve(**sn_curve_parameters)\n",
+    "damage = damage_calc.calc_damage(range_only_total,method = 'original')"
    ]
   },
   {
