Adjust pylife.mesh.meshplot import
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -24,7 +24,7 @@
     "from pylife.materialdata.woehler.widgets import *\n",
     "from pylife.materialdata.woehler.analyzer import *\n",
     "\n",
-    "import pylife.utils.meshplot\n",
+    "import pylife.mesh.meshplot\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
@@ -663,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
