[CREATE-3271] Further renaming creator -> analyzer
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -60,7 +60,7 @@
     "import pylife.materialdata.woehler as woehler\n",
     "import pylife.utils.diagrams.probability_data as probdiagram\n",
     "from pylife.materialdata.woehler.controls.data_file_display import DataFileDisplay\n",
-    "from pylife.materialdata.woehler.controls.woehler_curve_creator_options import  WoehlerCurveCreatorOptions\n",
+    "from pylife.materialdata.woehler.controls.woehler_curve_analyzer_options import  WoehlerCurveAnalyzerOptions\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
     "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n"
    ]
@@ -236,7 +236,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "woehler_curve_creator_options = WoehlerCurveCreatorOptions(fatigue_data)\n"
+    "woehler_curve_analyzer_options = WoehlerCurveAnalyzerOptions(fatigue_data)\n"
    ]
   },
   {
@@ -258,8 +258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "woehler_curve = woehler_curve_creator_options.woehler_curve\n",
-    "analyzer = woehler_curve_creator_options.analyzer()\n",
+    "woehler_curve = woehler_curve_analyzer_options.woehler_curve\n",
+    "analyzer = woehler_curve_analyzer_options.analyzer()\n",
     "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve, fatigue_data, analyzer)"
    ]
   },
@@ -285,7 +285,7 @@
     "                                                    occurrences_name='Load',\n",
     "                                                    title='Failure probability finite')\n",
     "probdiag_finite.plot()\n",
-    "if isinstance(analyzer, woehler.creators.probit.Probit):\n",
+    "if isinstance(analyzer, woehler.analyzers.probit.Probit):\n",
     "    probdiag_infinite = probdiagram.ProbabilityDataDiagram(analyzer.pearl_chain_estimator(),\n",
     "                                                        occurrences_name='Load',\n",
     "                                                        title='Failure probability inffinite')\n",
@@ -333,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   },
   "name": "woehler_analyzer.ipynb"
  },
