[CREATE-3271] Make final graph in Wöhler analysis work again.
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -50,6 +50,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from os import path\n",
     "import sys, os\n",
@@ -62,7 +63,8 @@
     "from pylife.materialdata.woehler.controls.data_file_display import DataFileDisplay\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_analyzer_options import  WoehlerCurveAnalyzerOptions\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
-    "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n"
+    "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n",
+    "from pylife.materialdata.woehler.diagrams.woehler_curve_diagrams import WoehlerCurveDiagrams\n"
    ]
   },
   {
@@ -312,7 +314,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "whole_woeler_curve_plotter = WoehlerCurveDiagrams(woehler_curve, fatigue_data, analyzer)"
+    "whole_woehler_curve_plotter = WoehlerCurveDiagrams(woehler_curve, fatigue_data, analyzer)\n",
+    "whole_woehler_curve_plotter.plot_fatigue_data()\n",
+    "whole_woehler_curve_plotter.plot_fitted_curve(k_2=np.inf)"
    ]
   }
  ],
