delete some notebooks
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -20,9 +20,10 @@
     "from pylife.strength.miner import MinerElementar, MinerHaibach\n",
     "from pylife.strength import failure_probability as fp\n",
     "\n",
-    "from pylife.materialdata.woehler.diagram import *\n",
-    "from pylife.materialdata.woehler.widgets import *\n",
-    "from pylife.materialdata.woehler.analyzer import *\n",
+    "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n",
+    "from pylife.materialdata.woehler.diagrams.woehler_curve_diagrams import WoehlerCurveDiagrams\n",
+    "from pylife.materialdata.woehler.controls.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
+    "from pylife.materialdata.woehler.controls.woehler_curve_analyzer_options import  WoehlerCurveAnalyzerOptions\n",
     "\n",
     "import pylife.mesh.meshplot\n",
     "import matplotlib.pyplot as plt\n",
@@ -423,7 +424,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Material parameters ###"
+    "### Material parameters ###\n",
+    "You can create your own material data from Woeler tests using the Notebook woehler_analyzer"
    ]
   },
   {
@@ -432,23 +434,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat = WL_param()\n",
+    "mat = pd.Series(index = ['k_1', 'ND_50', 'SD_50', '1/TN', '1/TS'],\n",
+    "                data = [8, 1.5e+06, 3e+02, 12, 1.1])\n",
     "display(mat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mat_para, _ = WL_param_display(mat)\n",
-    "sn_curve_parameters =  {key:mat_para[key] for key in mat_para.keys() - {'TN_inv', 'TS_inv'}} \n",
-    "mat_para['TS_inv'] = mat_para['TN_inv']**(1/mat_para['k_1'])\n",
-    "print(mat_para)\n",
-    "print(sn_curve_parameters)\n",
-    "mat_para['1/TN'] = mat_para['TN_inv']\n",
-    "mat_para['1/TS'] = mat_para['TS_inv']"
    ]
   },
   {
@@ -474,8 +462,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage_calc = sn_curve.FiniteLifeCurve(**sn_curve_parameters)\n",
-    "damage = damage_calc.calc_damage(range_only_total,method = 'original')"
+    "damage_calc = sn_curve.FiniteLifeCurve(**mat.drop(['1/TN','1/TS']))\n",
+    "damage = damage_calc.calc_damage(range_only_total,method = 'original')\n",
+    "display(damage)"
    ]
   },
   {
@@ -490,11 +479,12 @@
     "        self.k = k\n",
     "        self.TN = TN\n",
     "        self.loads_max = loads_max\n",
-    "SRI = mat_para['SD_50']*(mat_para['ND_50']**(1/mat_para['k_1']))\n",
-    "wc = wc_data(mat_para['k_1'],mat_para['TN_inv'],SRI) \n",
-    "_ = PlotWoehlerCurve.final_curve_plot(mat_para, 0,\"amp\",'ACC', \n",
-    "                                      'm/s^2',(1,1e8), (1e2,5e3),\n",
-    "                                      0)\n",
+    "SRI = mat['SD_50']*(mat['ND_50']**(1/mat['k_1']))\n",
+    "# wc = wc_data(mat['k_1'],mat['TN_inv'],SRI) \n",
+    "_ = WoehlerCurveDiagrams(mat,[],None, y_min=1, y_max=SRI).plot_fitted_curve(k_2 = None)\n",
+    "# _ = PlotWoehlerCurve.final_curve_plot(mat_para, 0,\"amp\",'ACC', \n",
+    "#                                       'm/s^2',(1,1e8), (1e2,5e3),\n",
+    "#                                       0)\n",
     "# plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())\n",
     "plt.step(np.cumsum(cycles),2*amplitude)"
    ]
@@ -663,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
