--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'woehler-test-data_withRunOutsColumn.csv'"
+    "# file_name = 'woehler-test-data_withRunOutsColumn.csv'"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   },
   "name": "woehler_analyzer.ipynb"
  },
