--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nominal Stress approach ###\n",
+    "This Notebook shows a general calculation stream for a nominal stress reliability approach.\n",
+    "#### Stress derivation #####\n",
+    "First we read in different time signals (coming from a test bench or a vehicle measurement e.g.).\n",
+    "\n",
+    "1. Import the time series into a pandas Data Frame\n",
+    "2. Resample the time series if necessary\n",
+    "3. Filter the time series with a bandpass filter if necessary\n",
+    "4. Edititing time series using Running Statistics methods\n",
+    "5. Rainflow Calculation\n",
+    "6. Mean stress correction\n",
+    "7. Multiplication with repeating factor of every manoveur\n",
+    "\n",
+    "#### Strength derivation #####\n",
+    "1. Import the SN data\n",
+    "2. Define load cycle limit\n",
+    "3. Select the material cycle parameter calculation method\n",
+    "4. Plot and check"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -474,14 +498,11 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "class wc_data:\n",
-    "    def __init__(self, k, TN,loads_max):\n",
-    "        self.k = k\n",
-    "        self.TN = TN\n",
-    "        self.loads_max = loads_max\n",
+    "\n",
     "SRI = mat['SD_50']*(mat['ND_50']**(1/mat['k_1']))\n",
-    "# wc = wc_data(mat['k_1'],mat['TN_inv'],SRI) \n",
-    "_ = WoehlerCurveDiagrams(mat,[],None, y_min=1, y_max=SRI).plot_fitted_curve(k_2 = None)\n",
+    "# Plotting\n",
+    "WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,\n",
+    "                 y_min=1, y_max=SRI, x_min=1e1, x_max=1e8).plot_fitted_curve( k_2=None)\n",
     "# _ = PlotWoehlerCurve.final_curve_plot(mat_para, 0,\"amp\",'ACC', \n",
     "#                                       'm/s^2',(1,1e8), (1e2,5e3),\n",
     "#                                       0)\n",
