problems with 10 and 90 sn plot

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -459,7 +459,7 @@
    "outputs": [],
    "source": [
     "mat = pd.Series(index = ['k_1', 'ND_50', 'SD_50', '1/TN', '1/TS'],\n",
-    "                data = [8, 1.5e+06, 3e+02, 12, 1.1])\n",
+    "                data = [8, 1.5e+06, 1.5e+02, 12, 1.1])\n",
     "display(mat)"
    ]
   },
@@ -501,13 +501,31 @@
     "\n",
     "SRI = mat['SD_50']*(mat['ND_50']**(1/mat['k_1']))\n",
     "# Plotting\n",
-    "WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,\n",
-    "                 y_min=1, y_max=SRI, x_min=1e1, x_max=1e8).plot_fitted_curve( k_2=None)\n",
-    "# _ = PlotWoehlerCurve.final_curve_plot(mat_para, 0,\"amp\",'ACC', \n",
-    "#                                       'm/s^2',(1,1e8), (1e2,5e3),\n",
-    "#                                       0)\n",
+    "diagdata = WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,y_min=1, y_max=SRI, x_min=1e1, x_max=1e12)\n",
+    "diagdata.plot_fitted_curve( k_2=np.inf)\n",
     "# plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())\n",
-    "plt.step(np.cumsum(cycles),2*amplitude)"
+    "plt.step(np.cumsum(cycles),2*amplitude)\n",
+    "plt.ylim(1,SRI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diagdata.y_max\n",
+    "# %matplotlib notebook\n",
+    "# plt.step(np.cumsum(cycles),2*amplitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SRI"
    ]
   },
   {
