--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -316,7 +316,7 @@
    "source": [
     "whole_woehler_curve_plotter = WoehlerCurveDiagrams(woehler_curve, fatigue_data, analyzer)\n",
     "whole_woehler_curve_plotter.plot_fatigue_data()\n",
-    "whole_woehler_curve_plotter.plot_fitted_curve(k_2=np.inf)"
+    "whole_woehler_curve_plotter.plot_fitted_curve(k_2=None)"
    ]
   }
  ],
